--- a/scripts/1.Data_Scraping_Page_link_.ipynb
+++ b/scripts/1.Data_Scraping_Page_link_.ipynb
@@ -16,7 +16,16 @@
     "id": "XJKm-GJGxAAc"
    },
    "source": [
-    "Data Scraping Test Drive"
+    "# Data Scraping Script"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This script is used for data scraping from the multiple pages of url pattern https://www.defense.gov/News/Contracts/?Page=1 .\n",
+    "It exports the web scrapped data into two file formats JSON: data/data_main.json and CSV (data/data_url.csv)\n",
+    "Please run this script from root directory."
    ]
   },
   {
@@ -48,7 +57,7 @@
     "id": "fGJnQTzXzQlo"
    },
    "source": [
-    "### Functions to interact with link data extraction."
+    "### Functions for  data extraction."
    ]
   },
   {
@@ -167,7 +176,9 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "IJl5V9u3tPpx",
-    "outputId": "3adee7e0-5eef-4152-d571-7f0ffb5f9977"
+    "outputId": "3adee7e0-5eef-4152-d571-7f0ffb5f9977",
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -372,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Viewing Data Frame"
+    "## Viewing Data in Data Frame"
    ]
   },
   {
@@ -607,7 +618,9 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "Wkc5ZWKZv0-r",
-    "outputId": "de2e367e-8b2c-4678-98b6-859c34101138"
+    "outputId": "de2e367e-8b2c-4678-98b6-859c34101138",
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -947,7 +960,7 @@
     "} \n",
     "      \n",
     "# Serializing json  \n",
-    "with open(\"data_main.json\", \"w\") as outfile:\n",
+    "with open(\"./data/data_main.json\", \"w\") as outfile:\n",
     "    json.dump(dictionary, outfile)"
    ]
   },
@@ -959,13 +972,6 @@
    "source": [
     "df.to_csv(\"./data/data_url.csv\",index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
